# Krititva_AI

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: CLAUDE.md  settings.json
.claude/skills/krititva-migration/: SKILL.md
.claude/skills/krititva-role-profile/: SKILL.md
.claude/skills/krititva-scaffold-module/: SKILL.md
.claude/skills/krititva-verify-traceability/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dco.yml  license-audit.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  cli.py  config.py  db.py  main.py  queue.py
apps/api/app/ai/: __init__.py  catalog.py  chunking.py  context.py  embeddings.py  events.py  llm_client.py  pipeline.py  retrieval.py  semaphore.py  templating.py
apps/api/app/ai/profiles/: __init__.py  architect.py  base.py  qa.py
apps/api/app/ai/prompts/: architect_system.j2  architect_user.j2  qa_system.j2  qa_user.j2
apps/api/app/api/: deps.py  errors.py
apps/api/app/api/routes/: artifacts.py  auth.py  documents.py  health.py  projects.py  work_items.py
apps/api/app/engine/: __init__.py  lexorank.py
apps/api/app/methodology/: __init__.py  templates.py
apps/api/app/migrations/: env.py  script.py.mako
apps/api/app/migrations/versions/: 0001_extensions_and_enums.py  0002_identity_and_tenancy.py  0003_refresh_tokens.py  0004_audit_log.py  0005_methodology_config.py  0006_work_items.py  0007_rank_collation.py  0008_documents_and_versions.py  0009_document_chunks.py  0010_ai_jobs_and_provenance.py  0011_lineage_chunks_fn.py  0012_lineage_chunks_project_scope.py
apps/api/app/models/: __init__.py  ai.py  audit_log.py  base.py  client.py  document.py  enums.py  invitation.py  organization.py  planning.py  project.py  project_member.py  refresh_token.py  user.py  work_item.py  workflow.py
apps/api/app/schemas/: artifacts.py  auth.py  document.py  llm_config.py  methodology.py  project.py  work_item.py
apps/api/app/security/: csrf.py  hashing.py  jwt.py  oidc.py  ratelimit.py
apps/api/app/services/: ai_orchestrator.py  audit.py  auth.py  bootstrap.py  documents.py  project.py  work_items.py
apps/api/app/workers/: arq_settings.py  embed.py  generation.py  heartbeat.py
apps/api/tests/: conftest.py  test_cli.py  test_config.py  test_health.py  test_ratelimit.py
apps/api/tests/engine/: test_ai_semaphore.py  test_chunking.py  test_lexorank.py  test_packing.py
apps/api/tests/integration/: _factories.py  conftest.py  test_ai_accept_work_items.py  test_ai_orchestrator.py  test_architect_profile.py  test_artifacts.py  test_auth_invitations.py  test_auth_login.py  test_auth_logout_me.py  test_auth_refresh.py  test_auth_setup.py  test_bootstrap.py  test_context_assembler.py  test_csrf.py  test_documents.py  test_documents_service.py  test_embedding_pipeline.py  test_link_chunk_scope.py  test_migrations.py  test_models_roundtrip.py  test_projects.py  test_qa_profile.py  test_ratelimit_api.py  test_rbac.py  test_work_item_engine.py  test_work_items.py
apps/api/tests/methodology/: test_templates.py
apps/api/tests/security/: test_hashing.py  test_jwt.py
apps/web/: .eslintrc.json  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/login/: page.tsx
apps/web/app/setup/: page.tsx
apps/web/components/: app-sidebar.tsx  login-form.tsx  logout-button.tsx  project-nav.tsx  setup-form.tsx  toaster.tsx  work-item-dialog.tsx
apps/web/components/ai/: ai-panel.tsx  citations.tsx  draft-review.tsx  generate-form.tsx  job-detail.tsx  job-list.tsx  job-status-badge.tsx  provenance-list.tsx  review-actions.tsx
apps/web/components/backlog/: backlog-list.tsx
apps/web/components/board/: board-card.tsx  kanban-board.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  textarea.tsx
apps/web/lib/: ai-catalog.ts  diff.ts  methodology.ts  toast.ts
apps/web/lib/api/: bootstrap.ts  client.ts  (+3 more)
deploy/: docker-compose.yml  litellm.config.yaml  nginx.conf
docs/: agile.methodology.json  krititva-ai-blueprint.md  krititva-completion-M0-T1-T3.md  krititva-hld.md  krititva-lld.md  krititva-roadmap.md  krititva-srs.md
(+17 files in other folders)
