[project]
name = "krititva-api"
version = "0.1.0a0"
description = "Krititva AI backend — FastAPI + SQLAlchemy 2.0 async + arq workers + contextual AI subsystem."
requires-python = ">=3.12,<3.13"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "The Krititva AI Contributors" }]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.6,<0.32",
    "sqlalchemy[asyncio]>=2.0.35,<2.1",
    "asyncpg>=0.29.0,<0.30",
    "alembic>=1.13.2,<1.14",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.5.2,<3",
    "arq>=0.26.1,<0.27",
    "redis>=5.0.8,<6",
    "argon2-cffi>=23.1.0,<24",
    "authlib>=1.3.2,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "email-validator>=2.2.0,<3",
    "httpx>=0.27.2,<0.28",
    "litellm>=1.48.0,<2",
    "jinja2>=3.1.4,<4",
    "python-multipart>=0.0.10,<0.1",
    "structlog>=24.4.0,<25",
    "prometheus-client>=0.20.0,<0.21",
    "orjson>=3.10.7,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=5.0.0,<6",
    "hypothesis>=6.112.1,<7",
    "testcontainers[postgres,redis]>=4.8.1,<5",
    # psycopg2 is only used by testcontainers' sync readiness probe; the app
    # itself talks to Postgres exclusively via asyncpg.
    "psycopg2-binary>=2.9.9,<3",
    "ruff>=0.6.7,<0.7",
    "mypy>=1.11.2,<2",
    "types-python-jose>=3.3.4,<4",
    "types-passlib>=1.7.7,<2",
]

[project.scripts]
krititva = "app.cli:main"
krititva-api = "app.main:main"
krititva-worker = "app.workers.arq_settings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ================================================================
# uv
# ================================================================
[tool.uv]
package = true

# ================================================================
# ruff
# ================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "N",                 # pep8-naming
    "SIM",               # simplify
    "RUF",               # ruff-specific
    "S",                 # flake8-bandit
    "ASYNC",             # flake8-async
    "T20",               # flake8-print (no print in production code)
]
ignore = [
    "E501",              # line length handled by formatter
    "S101",              # assert (fine in tests)
    "B008",              # allow FastAPI Depends() in defaults
    "N818",              # exceptions map to HTTP code names, not the -Error suffix (LLD §3.2)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]
"app/migrations/**/*.py" = ["E", "F", "N", "S"]
# The operator CLI prints to the terminal and intentionally shells out to pg_dump.
"app/cli.py" = ["T20", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"

# ================================================================
# mypy
# ================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = ["app/migrations/versions"]

[[tool.mypy.overrides]]
module = ["arq.*"]
ignore_missing_imports = true

# ================================================================
# pytest
# ================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires a running postgres + redis (via testcontainers)",
    "smoke: hits a real Ollama; excluded from PR CI",
]

# ================================================================
# coverage
# ================================================================
[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "app/main.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
